--- a/primer paso/styles.css
+++ b/primer paso/styles.css
@@ -92,6 +92,10 @@ p {
     justify-content: center;
   }
 
+  .greeting {
+    text-align: center;
+  }
+
   @media (max-width: 768px) {
     .column {
       flex: 100%;
